--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.5",
+    "deprecated-react-native-prop-types": "^4.0.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-video": "^5.2.1",
     "react-native-webview": "^12.0.2"
   },
@@ -28,6 +30,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
+    "@types/react-native-svg-charts": "^5.0.12",
     "@types/react-native-video": "^5.0.14",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
